--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-root {
+:root {
 --textColor: rgb(65,64,66);
 --btnBgColor: #3287b7;
 }
@@ -22,9 +22,17 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 .primaryBtn {
   background-color: var(--btnBgColor);
   color: #ffff;
   border-radius: 2em;
   padding: 0.5em 1.5em;
+  font-size:1.2em;
+  font-weight:500;
+  font-style:normal;
+  text-align:center;
 }
